--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 <h:body>
 
    <h:form>
-      <h:outputText value=" #{cdiBean.patika}" />
+      <h:outputText value=" #{namedtuto.namedData}" />
    </h:form>
 </h:body>
 </html>
